--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -63,46 +63,49 @@ img {
 </style>
 </head>
 <body>
-<div class="container-fluid" style="background-color:;color:orange;padding:10px;border-bottom:1px solid lightgrey;">
+<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
-<div class="col-sm-2"><h4 style="color:orange;background-color:white;text-align:center">HoosierEvents</h4></div>
-<!--<div class="col-sm-3"><image src="images/logo 4.jpg" style="min-width:350px;max-width:300px;max-height:25px;></div>-->
-<div class="col-sm-1"><button class="btn-default xyz" style="color:orange;background-color:white;border:0px;"><h5>Explore</h5></button></div>
+<div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
 <div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
 <div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
-<div class="col-sm-1"><button class="btn-default xyz" style="color:orange;background-color:white;border:0px;"><h5>Login</h5></button></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Login</h5></button></div>
 </div>
 </div>
-  
-<!--<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
+  <!--
+<nav class="navbar navbar-inverse" style="background-color:white;width:100%;border:0px solid lightgrey;border-bottom:1px solid lightgrey;" >
   <div class="container-fluid" style="text-align:left">
     <div class="navbar-header">
-      <a class="navbar-brand" href="homePage.html" id="abc">HoosierEvents</a>
+      <a class="navbar-brand" href="homePage.html" id="abc" style="color:#AE0D0D"><h4>HoosierEvents</h4></a>
     </div>
     <ul class="nav navbar-nav">
-      <li id="homepage"><a href="homePage.html" class="top-nav-links" style="color:white;text-align:">Home</a></li>
+      <li id="homepage"><a href="homePage.html" class="top-nav-links" style="color:#AE0D0D;text-align:"><h5>Home</h5></a></li>
     </ul>
 	<div class="col-sm-4">
 	    <ul class="nav navbar-nav">
 <li>	<input type="text" class="form-control" style="width:50%;top:50%;position:relative;"></li>
 </ul>
 </div>
-	<!--<ul class="nav navbar-nav" id="explore">
-      <li><a class="top-nav-links" href="search_events.html" style="color:white;">Explore Events</a></li>
-    </ul>-->
+<ul class="nav navbar-nav" id="explore">
+      <li><a class="top-nav-links" href="search_events.html" style="color:#AE0D0D;"></h5>Explore Events</h5></a></li>
+    </ul>
+	<ul class="nav navbar-nav" id="explore">
+      <li><a href="homePage.html" class="top-nav-links" style="color:#AE0D0D;text-align:"><h5>Explore</h5></a></li>
+    </ul>
 	
-<!--    <form class="navbar-form navbar-left" action="">
+   <form class="navbar-form navbar-left" action="">
       <div class="form-group">
         <input type="text" class="form-control" style="text-align:center;" placeholder="search for events!">
       </div>
-      <button type="submit" class="btn btn-default" style="height:4.5% !important;width:15%!important;position:relative"><span class="glyphicon glyphicon-search"></span></button>
-    </form> -->
-<!--	<ul class="nav navbar-nav navbar-right">
-      <li><a href="loginpage.html" style="">Sign In</a></li>
+      <button type="submit" class="btn btn-default"><h5>Search</h5></button>
+    </form> 
+	<ul class="nav navbar-nav navbar-right">
+      <li><a href="loginpage.html" style="color:#AE0D0D"><h5>Sign In</h5></a></li>
     </ul>
 
 	</div>
 </nav>-->
+
 <div class="container" style="width:100%">
 <img class="mySlides" src="/images/p3.jpg" style="width:100%;height:auto;">
 <img class="mySlides" src="/images/p22.jpg" style="width:100%;height:auto;">
