--- a/src/main/resources/templates/PaymentPortal.html
+++ b/src/main/resources/templates/PaymentPortal.html
@@ -15,11 +15,22 @@
 		<script th:src="@{script/PaymentPortal.js}"></script>
 </head>
 <body>
+
+<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
+<div class="row">
+<div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
+<div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
+<div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Login</h5></button></div>
+</div>
+</div>
+
 <div id="container">
-<div id="header">
-		<!-- Navigation bar -->
+<!--<div id="header">
+	
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-  			<!-- Brand/logo -->
+  			
   			<a class="navbar-brand" href="#">
   				<img id="logoimg" src="Logo 4.jpg" class="img-fluid">
   			</a>
@@ -50,70 +61,82 @@
 			 </div>
 			 
  		</nav>
- 		</div>
+ 		</div>-->
  		<div id="body-container">
  		<!-- <div id="here"></div> -->
  		<div><h2>Choose your preferred method of payment:</h2></div>
 		<div id="paypal-button-container"></div></div></div>
 
-		<!-- Footer -->
+		
+		<div class="container-fluid fancy" style="text-align:center;top:20%;height:auto;position:relative;background-color:lightgrey !important;color:">
+<div class="row" style="background-color:;">
+	<div class="col-sm-4">
+	<div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Hoosier Events</h4></div></div>
+		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
+	<br>
+	</div>
+	<div class="col-sm-4 links" style="color:#AE0D0D;"><div class="row"><div class="col-sm-12"><h4>Useful Links</h4></div></div>
+		
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Your Account</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">About us</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Help</a></div></div>
+		<br>
+	</div>
+	
+	<div class="col-sm-4"><div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Contact Us</h4></div></div>
+				            <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
+							<br>
+				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
+							<br>
+							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88
+
+
+	</div>
+</div>
+</div>
+		<!-- 
 		<footer class="page-footer font-small unique-color-dark">
 		
 		    <div id="footertopbar">
 		      <div class="container">
 		
-		        <!-- Grid row-->
 		        <div class="row py-4 d-flex align-items-center">
 		
-		          <!-- Grid column -->
 		          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
 		            <h6 class="mb-0">Get connected with us on social networks!</h6>
 		          </div>
-		          <!-- Grid column -->
 		
-		          <!-- Grid column -->
 		          <div class="col-md-6 col-lg-7 text-center text-md-right">
 		
-		            <!-- Facebook -->
 		            <a id="socialmedialink" href="#" class="fb-ic">
 		              <i class="fa fa-facebook white-text mr-4"> </i>
 		            </a>
-		            <!-- Twitter -->
 		            <a id="socialmedialink" href="#" class="tw-ic">
 		              <i class="fa fa-twitter white-text mr-4"> </i>
 		            </a>
-		            <!-- Google +-->
 		            <a id="socialmedialink" href="#" class="gplus-ic">
 		              <i class="fa fa-google-plus white-text mr-4"> </i>
 		            </a>
-		            <!--Linkedin -->
 		            <a id="socialmedialink" href="#" class="li-ic">
 		              <i class="fa fa-linkedin white-text mr-4"> </i>
 		            </a>
-		            <!--Instagram-->
 		            <a id="socialmedialink" href="#" class="ins-ic">
 		              <i class="fa fa-instagram white-text"> </i>
 		            </a>
 		
 		          </div>
-		          <!-- Grid column -->
 		
 		        </div>
-		        <!-- Grid row-->
 		
 		      </div>
 		    </div>
 		
-		    <!-- Footer Links -->
 		    <div id="footer" class="container text-center text-md-left mt-5">
 		
-		      <!-- Grid row -->
 		      <div class="row mt-3">
 		
-		        <!-- Grid column -->
 		        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 		
-		          <!-- Content -->
 		          <h6 class="text-uppercase font-weight-bold">Hoosier Events</h6>
 		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 		          <p> Lorem ipsum dolor sit amet, consectetur
@@ -122,7 +145,6 @@
 		        </div>
 		        <div  class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 		
-		          <!-- Links -->
 		          <h6 class="text-uppercase font-weight-bold">Useful links</h6>
 		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 		          <p>
@@ -139,12 +161,10 @@
 		          </p>
 		
 		        </div>
-		        <!-- Grid column -->
 		
-		        <!-- Grid column -->
+		 
 		        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 		
-		          <!-- Links -->
 		          <h6 class="text-uppercase font-weight-bold">Contact</h6>
 		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 		          <p>
@@ -157,22 +177,20 @@
 		            <i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
 		
 		        </div>
-		        <!-- Grid column -->
 		
 		      </div>
-		      <!-- Grid row -->
 		
 		    </div>
-		    <!-- Footer Links -->
+		    
 		
-		    <!-- Copyright -->
+		   
 		    <div class="footer-copyright text-center py-3">© 2018 Copyright:
 		      <a href="https://mdbootstrap.com/bootstrap-tutorial/"> HoosierEvents</a>
 		    </div>
-		    <!-- Copyright -->
+		    
 		
 		  </footer>
-		  <!-- Footer -->
+		     -->
 
 </body>
 </html>
