--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -25,14 +25,13 @@
 <body>
 <!-- NAVIGATION BAR -->
 	
-<div class="container-fluid" style="background-color:;color:orange;padding:10px;border-bottom:1px solid lightgrey;">
+<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
-<div class="col-sm-2"><h4 style="color:orange;background-color:white;text-align:center;font-size:3vw;">HoosierEvents</h4></div>
-<!--<div class="col-sm-3"><image src="logo 4.jpg" style="min-width:350px;max-width:300px;max-height:25px;></div>-->
-<div class="col-sm-1"><button class="btn-default xyz" style="color:orange;background-color:white;border:0px;" onclick="javascript:alert('Hello World!')"><h5>Explore</h5></button></div>
+<div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
 <div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
-<div class="col-sm-2"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
-<div class="col-sm-1"><button class="btn-default xyz" style="color:orange;background-color:white;border:0px;"><h5>Login</h5></button></div>
+<div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Login</h5></button></div>
 </div>
 </div>
 
