--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -11,6 +11,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" th:href="@{css/eventpage.css}">
+  <link rel="stylesheet" th:href="@{css/chatWindow.css}">
+  <link rel="stylesheet" th:href="@{css/chat.css}">
   	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	    <link rel="stylesheet" type="text/css" th:href="@{css/HomePageStyle.css}">
@@ -87,7 +89,6 @@
 		
 		<div class="row page-header">
 			<div class="col-sm-12"><h4>Organiser Contact Info:</h4></div>
-			<!--<div class="col-sm-4" style="text-align:center"><button class="btn-block chat-button">CHAT </button></div>-->
 		</div>
 		<div class="row">
 			<div class="col-sm-6"><h5 id="created_by"></h5></div>
@@ -100,7 +101,8 @@
 	
 			<div class="col-sm-12"><h5>812555555</h5></div>
 		</div><br>
-					<div class="row"><div class="col-sm-12" style="text-align:center"><button class="btn-block chat-button">Chat </button></div></div>
+					<div class="row"><div class="col-sm-12" style="text-align:center">
+					<button id="chatButton" class="btn-block chat-button">Chat </button></div></div>
 
 		<br>
 		
@@ -108,6 +110,29 @@
 </div>
 </div>
 <br><br><br><br><br>
+
+
+ <div id="chat-page" class="hidden">
+	<div class="chat-container">
+		<div class="chat-header">
+			<table><tr><td align="left"><h2>Contact Organizer</h2></td>
+						<td align="right"><button class="close">Close</button></td></tr></table>
+		</div>
+		<div class="connecting">Connecting...</div>
+		<ul id="messageArea">
+
+		</ul>
+		<form id="messageForm" name="messageForm">
+			<div class="form-group">
+				<div class="input-group clearfix">
+					<input type="text" id="message" placeholder="Type a message..."
+						autocomplete="off" class="form-control" />
+					<button type="submit" class="primary">Send</button>
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
 
 
 <div class="container-fluid fancy" style="text-align:center;top:20%;height:auto;position:relative;background-color:lightgrey !important;color:">
@@ -161,12 +186,15 @@ $(document).ready(function(){
 			document.getElementById("created_by").innerHTML=data.createdBy.name;
 			document.getElementById('myIframe').src = "map.html?seed=" + data.location;
 	   },
-	   error:function(exception){alert('Exeption:'+exception);}
+	   //error:function(exception){alert('Exeption:'+exception);}
 	}); 
 });	
 
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRL6D4jfWOtmDd3ge1pRtkEx6OtrqdU8c&callback=myMap"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script src="/script/chat.handler.js"></script>
 
 </body>
 </html>
