--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -69,7 +69,11 @@ img {
 <div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
 <div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
 <div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
-<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Login</h5></button></div>
+<div class="col-sm-1">
+    <form action="/login">
+    <button class="btn-default xyz"  style="color:#AE0D0D;background-color:white;border:0px;"><h5>Login</h5></button>
+    </form>
+</div>
 </div>
 </div>
   <!--
