--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -72,7 +72,7 @@
 <div class="row">
 	<div class="col-sm-8">
       
-		<div class="row" style="width:90%">
+		<div class="row" style="width:90%;border-bottom:0.5px solid lightgrey">
 			<div class="page-header"><h3>Description</h3></div>
 		 </div>
 		<div class="row" style="width:90%;">
@@ -81,11 +81,11 @@
     </div>
 		<br><br><br>
 	
-    <div class="col-sm-4" style="border-left:0.5px solid lightgrey">    
+    <div class="col-sm-4" style="">    
 		<!--<div class="row" >
 			<div class="col-sm-12"><iframe id="myIframe" style="border:1px solid lightgrey;width:100%;position:relative;left:0%;"></iframe></div>
 		</div>-->
-		<br>
+		
 		
 		<div class="row page-header">
 			<div class="col-sm-12"><h4>Organiser Contact Info:</h4></div>
@@ -181,7 +181,7 @@ var loc="Bloomington";
 document.getElementById('myIframe').src = "/map?seed=" + loc;
 
 
-var event_id=13;
+var event_id=11;
 $(document).ready(function(){
 	$.ajax({
 	type:'POST',
@@ -197,7 +197,7 @@ $(document).ready(function(){
 			document.getElementById("event_location").innerHTML=data.location;
 			document.getElementById("event_description").innerHTML=data.description;
 			document.getElementById("created_by").innerHTML=data.createdBy.name;
-			document.getElementById('myIframe').src = "map.html?seed=" + data.location;
+			/*document.getElementById('myIframe').src = "map.html?seed=" + data.location;*/
 	   },
 	   //error:function(exception){alert('Exeption:'+exception);}
 	}); 
