--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -81,14 +81,15 @@
     </div>
 		<br><br><br>
 	
-    <div class="col-sm-4" style="">    
+    <div class="col-sm-4" style="">  
+    
 		<!--<div class="row" >
 			<div class="col-sm-12"><iframe id="myIframe" style="border:1px solid lightgrey;width:100%;position:relative;left:0%;"></iframe></div>
 		</div>-->
 		
 		
 		<div class="row page-header">
-			<div class="col-sm-12"><h4>Organiser Contact Info:</h4></div>
+			<div class="col-sm-12"><h4>Contact Info:</h4></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-6"><h5 id="created_by"></h5></div>
@@ -105,7 +106,11 @@
 					<button id="chatButton" class="btn-block chat-button">Chat </button></div></div>
 
 		<br>
-		
+		 <div class="row">
+    <div class="col-sm-12">
+    <a class="twitter-timeline" min-width:350px; data-height="300" href="https://twitter.com/BillGates?ref_src=twsrc%5Etfw">Twitter Handle</a> 
+    </div>
+    </div> 
 	</div>
 </div>
 </div><br><br><br>
@@ -173,7 +178,7 @@
 
 
 
-
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script>
 var loc="Bloomington";
 
