Google ads on homepage

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -61,6 +61,13 @@ img {
     padding: 2px 16px;
 }
 </style>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+ (adsbygoogle = window.adsbygoogle || []).push({
+   google_ad_client: "ca-pub-7446451293480885",
+   enable_page_level_ads: true
+ });
+</script>
 </head>
 <body>
 <div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
