changed UI of login and signup

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,10 +37,10 @@
 <div class="container-fluid" style="background-color:white;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
 <div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
-<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
-<div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
+<div class="col-sm-1"></div>
+<div class="col-sm-5"></div>
 <div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
-<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Login</h5></button></div>
+<div class="col-sm-1"></div>
 </div>
 </div>
 <div class="main12">
