--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
+<!--<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
     <div class="container-fluid" style="text-align:left">
         <div class="navbar-header">
             <a class="navbar-brand" href="homePage.html" id="abc">HoosierEvents</a>
@@ -29,22 +29,33 @@
         <ul class="nav navbar-nav">
             <li id="homepage"><a href="homePage.html" class="top-nav-links" style="color:white;">Home</a></li>
         </ul>
-        <!--<ul class="nav navbar-nav" id="explore">
+        <ul class="nav navbar-nav" id="explore">
           <li><a class="top-nav-links" href="search_events.html" style="color:white;">Explore Events</a></li>
-        </ul>-->
+        </ul>
 
-        <!--    <form class="navbar-form navbar-left" action="">
+           <form class="navbar-form navbar-left" action="">
               <div class="form-group">
                 <input type="text" class="form-control" style="text-align:center;" placeholder="search for events!">
               </div>
               <button type="submit" class="btn btn-default" style="height:4.5% !important;width:15%!important;position:relative"><span class="glyphicon glyphicon-search"></span></button>
-            </form> -->
+            </form> 
         <ul class="nav navbar-nav navbar-right">
             <li><a href="loginpage.html" style="">Sign In</a></li>
         </ul>
 
     </div>
-</nav>
+</nav>-->
+
+
+<div class="container-fluid" style="background-color:white;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
+<div class="row">
+<div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
+<div class="col-sm-1"></div>
+<div class="col-sm-5"></div>
+<div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Login</h5></button></div>
+</div>
+</div>
 
 <div class="container" style="top:5%;border:0.5px solid #F0EDED;border-radius:4px;position:relative;background-color:white">
     <div class="row">
@@ -89,58 +100,32 @@
 
     </div>
 </div>
-<!-- <!FOOTER DIV> -->
 
-<div class="container-fluid footer">
-    <div class="row" style="background-color:#AE1616; color:black">
-        <div class="col-sm-3"><h5>Get Connected with us on Social Media</h5></div>
-        <div class="col-sm-6"></div>
-        <div class="col-sm-3">
-            <div class="row" style="text-align:center">
-                <!-- Facebook -->	<div class="col-sm-3">
-                <a id="socialmedialink" href="#" class="fb-ic">
-                    <i class="fa fa-facebook white-text mr-4"> </i>
-                </a>
-            </div>
-                <!-- Twitter -->
-                <div class="col-sm-3">
-                    <a id="socialmedialink" href="#" class="tw-ic">
-                        <i class="fa fa-twitter white-text mr-4"> </i>
-                    </a>
-                </div>
-                <!-- Google +-->
-                <div class="col-sm-3">
-                    <a id="socialmedialink" href="#" class="gplus-ic">
-                        <i class="fa fa-google-plus white-text mr-4"> </i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row" style="background-color:#534E4E">
-        <div class="col-sm-4">
-            <div class="row"><h4>Hoosier Events</h4></div>
-            <div class="row"><h5>Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</h5></div>
-            <br />
-        </div>
-        <div class="col-sm-4 links" style="color:white"><h4>Useful Links</h4>
-
-            <div class="row"><a href="" style="color:#48A2BD">Your Account</a></div>
-            <div class="row"><a href="" style="color:#48A2BD">About us</a></div>
-            <div class="row"><a href="" style="color:#48A2BD">Help</a></div>
-            <br />
-        </div>
-
-        <div class="col-sm-4"><h4>Contact Us</h4>
-            <i class="fa fa-home mr-3"></i>&nbsp; Bloomington, IN 47408, US
-            <br />
-            <i class="fa fa-envelope mr-3"></i>&nbsp; info@example.com
-            <br />
-            <i class="fa fa-phone mr-3"></i>&nbsp; + 01 234 567 88
+<div class="container-fluid fancy" style="text-align:center;top:20%;height:auto;position:relative;background-color:lightgrey !important;color:">
+<div class="row" style="background-color:;">
+	<div class="col-sm-4">
+	<div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Hoosier Events</h4></div></div>
+		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
+	<br>
+	</div>
+	<div class="col-sm-4 links" style="color:#AE0D0D;"><div class="row"><div class="col-sm-12"><h4>Useful Links</h4></div></div>
+		
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Your Account</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">About us</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Help</a></div></div>
+		<br>
+	</div>
+	
+	<div class="col-sm-4"><div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Contact Us</h4></div></div>
+				            <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
+							<br>
+				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
+							<br>
+							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88
 
 
-        </div>
-    </div>
+	</div>
+</div>
 </div>
 
 </body>
