--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -33,7 +33,7 @@ function initMap() {
   */
   
   
-      var address ="NYC";
+      var address =seed;
     geocoder.geocode( { 'address': address}, function(results, status) {
       if (status == 'OK') {
         map.setCenter(results[0].geometry.location);
