--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,6 +34,9 @@
 
 <body>
 
+
+
+
 <div class="container-fluid" style="background-color:white;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
 <div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
@@ -43,6 +46,28 @@
 <div class="col-sm-1"></div>
 </div>
 </div>
+
+<ul class='slideshow'>
+  <li>
+    <h3>The Seasons</h3>
+    <!-- By Keven Law from Los Angeles, USA (Long Hot Summer......) [CC-BY-SA-2.0 (http://creativecommons.org/licenses/by-sa/2.0)], via Wikimedia Commons, http://commons.wikimedia.org/wiki/File%3AFlickr_-_law_keven_-_Long_Hot_Summer.......jpg -->
+    <span>Summer</span>
+  </li>
+  <li>
+    <!-- By http://www.ForestWander.com [CC-BY-SA-3.0-us (http://creativecommons.org/licenses/by-sa/3.0/us/deed.en)], via Wikimedia Commons, http://commons.wikimedia.org/wiki/File%3ARed-fall-tree-lake_-_West_Virginia_-_ForestWander.png -->
+    <span>Fall</span>
+  </li>
+  <li>
+    <!-- By Valerii Tkachenko [CC-BY-2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons, http://commons.wikimedia.org/wiki/File%3AWinter_wonderland_Austria_mountain_landscape_(8290712092).jpg -->
+    <span>Winter</span>
+  </li>
+  <li>
+    <!-- By Arman7 (Own work) [CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0) or GFDL (http://www.gnu.org/copyleft/fdl.html)], via Wikimedia Commons, http://commons.wikimedia.org/wiki/File%3ABoroujerd_spring.jpg -->
+    <span>Spring</span>
+  </li>
+</ul>
+
+
 <div class="main12">
 <div class="container-fluid" style="padding:70px;"></div>
 <!--
